--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,9 @@ set_target_properties(finmath_bindings PROPERTIES OUTPUT_NAME "finmath")
 # Link the Python bindings target with the C++ library
 target_link_libraries(finmath_bindings PRIVATE finmath_library)
 
+install(TARGETS finmath_library
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}  # Use CMake's standard variable
+)
 # Set install target for pip to find shared lib
 install(TARGETS finmath_bindings
         LIBRARY DESTINATION .
