--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -2,7 +2,7 @@ name: Build Wheels
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, pip_test_2 ]
   pull_request:
     branches: [ main ]
 
