--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -10,7 +10,7 @@ jobs:
   build_wheels:
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest]
+        os: [ windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Check out code
