discount factor and future values

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,9 @@ add_library(finmath_library SHARED ${SOURCES}
     "include/finmath/TimeSeries/simple_moving_average.h"
     "include/finmath/TimeSeries/rsi.h"
     "include/finmath/TimeSeries/ema.h"
-    "include/finmath/TimeSeries/rolling_std_dev.h")
+    "include/finmath/TimeSeries/rolling_std_dev.h"
+    "include/finmath/InterestAndAnnuities/discount_factor.h"
+    "include/finmath/InterestAndAnnuities/present_future_value.h")
 
 # Test executables
 add_executable(black_scholes_test test/OptionPricing/black_scholes_test.cpp)
@@ -43,6 +45,12 @@ target_link_libraries(rsi_test finmath_library)
 add_executable(rolling_std_dev_test test/TimeSeries/rolling_std_dev_test.cpp)
 target_link_libraries(rolling_std_dev_test finmath_library)
 
+add_executable(discount_factor_test test/InterestAndAnnuities/discount_factor_test.cpp)
+target_link_libraries(discount_factor_test finmath_library)
+
+add_executable(present_future_value_test test/InterestAndAnnuities/present_future_value_test.cpp)
+target_link_libraries(present_future_value_test finmath_library)
+
 # Test runner
 add_executable(run_all_tests test/test_runner.cpp)
 
@@ -55,6 +63,8 @@ add_test(NAME BinomialOptionPricingTest COMMAND binomial_option_pricing_test)
 add_test(NAME CompoundInterestTest COMMAND compound_interest_test)
 add_test(NAME RSITest COMMAND rsi_test)
 add_test(NAME RollingStdDevTest COMMAND rolling_std_dev_test)
+add_test(NAME DiscountFactorTest COMMAND discount_factor_test)
+add_test(NAME PresentFutureValueTest COMMAND present_future_value_test)
 
 # Add a custom target to run all tests
 add_custom_target(build_and_test
@@ -62,6 +72,8 @@ add_custom_target(build_and_test
     COMMAND ${CMAKE_COMMAND} --build . --target binomial_option_pricing_test
     COMMAND ${CMAKE_COMMAND} --build . --target compound_interest_test
     COMMAND ${CMAKE_COMMAND} --build . --target rsi_test
+    COMMAND ${CMAKE_COMMAND} --build . --target discount_factor_test
+    COMMAND ${CMAKE_COMMAND} --build . --target present_future_value_test
     COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
 )
