--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 
 project(finmath)
 
@@ -8,6 +8,31 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Add debugging symbols (set to Release for optimized performance if needed)
 set(CMAKE_BUILD_TYPE Release)
+
+# Enable SIMD optimizations based on architecture
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)")
+    # x86/x86_64: Enable SSE2 (baseline) and detect AVX
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
+    
+    # Try to enable AVX if available
+    include(CheckCXXCompilerFlag)
+    CHECK_CXX_COMPILER_FLAG("-mavx" COMPILER_SUPPORTS_AVX)
+    if(COMPILER_SUPPORTS_AVX)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
+        message(STATUS "AVX support enabled")
+    else()
+        message(STATUS "AVX not supported, using SSE2")
+    endif()
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64|arm64|ARM64)")
+    # ARM64: NEON is standard on ARMv8
+    message(STATUS "ARM NEON support enabled (ARMv8)")
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^arm")
+    # ARM32: Try to enable NEON
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpu=neon")
+    message(STATUS "ARM NEON support enabled (ARMv7)")
+else()
+    message(STATUS "Using scalar fallback (no SIMD)")
+endif()
 
 # Add include directories
 include_directories(${PROJECT_SOURCE_DIR}/include)
@@ -65,14 +90,19 @@ add_cpp_test(RSITest test/TimeSeries/RSI/C++/rsi_test.cpp)
 add_cpp_test(RollingVolatilityTest test/TimeSeries/RollingVolatility/C++/rolling_volatility_test.cpp)
 add_cpp_test(SimpleMovingAverageTest test/TimeSeries/SimpleMovingAverage/C++/simple_moving_average_test.cpp)
 add_cpp_test(EMATest test/TimeSeries/EMA/C++/ema_test.cpp)
-# Add tests for EMA here later...
+add_cpp_test(SIMDHelperTest test/Helper/C++/simd_helper_test.cpp)
+
+# Add SIMD-optimized function tests
+add_cpp_test(SimpleMovingAverageSIMDTest test/TimeSeries/SimpleMovingAverage/C++/simple_moving_average_simd_test.cpp)
+add_cpp_test(RSISIMDTest test/TimeSeries/RSI/C++/rsi_simd_test.cpp)
+add_cpp_test(EMASIMDTest test/TimeSeries/EMA/C++/ema_simd_test.cpp)
 
 # Add pybind11 for Python bindings
 include(FetchContent)
 FetchContent_Declare(
     pybind11
     GIT_REPOSITORY https://github.com/pybind/pybind11.git
-    GIT_TAG v2.10.0  # Use a stable version of pybind11
+    GIT_TAG v2.11.1  # Use a stable version of pybind11
 )
 FetchContent_MakeAvailable(pybind11)
 
